--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
+    "i18next": "^25.2.1",
     "lucide-react": "^0.522.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-i18next": "^15.5.3",
+    "react-router": "^7.6.2",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
